# cop_pipeline

./: .gitignore  ADAPTIVE_NUCLEAR_IMPLEMENTATION.md  BUILD_INSTRUCTIONS.md  CONTEXT_POISONING_ADDITION.md  CONVERGENCE_DETECTION_FIX.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DETAILED_LOGGING_GUIDE.md  DETAILED_LOGGING_README.md  Dockerfile  Dockerfile.render  FALLBACK_STRATEGY_FIX.md  FIXES_IMPLEMENTED.md  FIXES_VALIDATION_ROUND2.md  FIX_IMPLEMENTATION_SUMMARY.md  FIX_OPENAI_API_SAFETY_BLOCKS.md  FIX_SUMMARY.md  GPT51_INTEGRATION_FIX.md  HARMFUL_QUERY_EXAMPLES.md  IMPROVEMENTS.md  IMPROVEMENTS_CHECKLIST.md  IMPROVEMENTS_PRIORITY_2_3.md  IMPROVEMENTS_STRATEGIC_ADAPTATION.md  INJECTION_REFUSAL_SOLUTIONS.md  INTEGRATION_TEST_RESULTS.md  JAILBREAK_OPTIMIZATION_GUIDE.md  JUDGE_FALLBACK_IMPLEMENTATION.md  MODE_FIX_SUMMARY.md  MULTITURN_OPTIMIZATION_IMPLEMENTATION.md  MULTITURN_TEST_ANALYSIS.md  MULTI_TURN_IMPROVEMENTS.md  Makefile  NEW_FEATURES.md  NUCLEAR_MODE_SUMMARY.md  NUCLEAR_PHASE_ANALYSIS.md  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_USAGE_GUIDE.md  PPL_AND_MULTITURN_IMPLEMENTATION.md  PRINCIPLE_DEDUPLICATION_ANALYSIS.md  (+49 more)
agents/: __init__.py  injection_agent.py  judge_llm.py  red_teaming_agent.py  target_interface.py
config/: __init__.py  prometheus.yml  settings.py
database/: __init__.py  models.py  repository.py
docs/: MULTI_TURN_FRAMEWORK.md  NUCLEAR_MODE.md
evaluation/: __init__.py  attack_detector.py  jailbreak_scorer.py  principle_validator.py  similarity_checker.py  similarity_success_analyzer.py
evasion/: __init__.py  ppl_scorer.py
(+107 files in other folders)
