[tool.poetry]
name = "cop-pipeline"
version = "0.1.0"
description = "Composition of Principles Agentic Red-Teaming Pipeline"
authors = ["Scale AI Red Team"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]